spl_frontend/src/parser/tests/snapshots/spl_frontend__parser__tests__incremental__delete_condition_lhs.snap
---
source: spl_frontend/src/parser/tests/incremental.rs
expression: ast
---
Program {
    global_declarations: [
        Reference {
            reference: Procedure(
                ProcedureDeclaration {
                    doc: [],
                    name: Some(
                        Identifier {
                            value: "main",
                            info: AstInfo {
                                range: 1..2,
                                errors: [],
                            },
                        },
                    ),
                    parameters: [],
                    variable_declarations: [],
                    statements: [
                        Reference {
                            reference: If(
                                IfStatement {
                                    condition: None,
                                    if_branch: Some(
                                        Reference {
                                            reference: Error(
                                                AstInfo {
                                                    range: 0..3,
                                                    errors: [
                                                        SplError(
                                                            0..3,
                                                            ParseErrorMessage(
                                                                UnexpectedCharacters(
                                                                    "<=1)",
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            ),
                                            offset: 2,
                                        },
                                    ),
                                    else_branch: None,
                                    info: AstInfo {
                                        range: 0..5,
                                        errors: [
                                            SplError(
                                                1..1,
                                                ParseErrorMessage(
                                                    ExpectedToken(
                                                        "expression",
                                                    ),
                                                ),
                                            ),
                                            SplError(
                                                1..1,
                                                ParseErrorMessage(
                                                    MissingClosing(
                                                        ')',
                                                    ),
                                                ),
                                            ),
                                        ],
                                    },
                                },
                            ),
                            offset: 5,
                        },
                        Reference {
                            reference: Block(
                                BlockStatement {
                                    statements: [],
                                    info: AstInfo {
                                        range: 0..2,
                                        errors: [],
                                    },
                                },
                            ),
                            offset: 10,
                        },
                    ],
                    info: AstInfo {
                        range: 0..13,
                        errors: [],
                    },
                },
            ),
            offset: 0,
        },
    ],
    info: AstInfo {
        range: 0..13,
        errors: [],
    },
}
